feat: unify system logging
